--- a/package.json
+++ b/package.json
@@ -1,16 +1,26 @@
 {
+  "homepage": "https://tamilmuhilan123.github.io/Portfolio",
   "name": "index",
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "main": "index.js",
+  "engines": {
+    "node": "^20.17.0 || >=22.9.0"
+  },
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist",
+    "host": "vite --host",
+    "start": "node index.js"
   },
   "dependencies": {
     "framer-motion": "^12.19.2",
+    "gh-pages": "^6.3.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0"
   },
